# zenkins

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_builds.py  test_client.py  test_jobs.py
zenkins/: __init__.py  __main__.py  artifacts.py  build.py  builds.py  cli.py  client.py  failures.py  init.py  jobs.py  log.py  params.py  queue.py  status.py  types.py
