[project]
name = "zenkins"
version = "0.0.0.dev0"
description = "CLI tool for Jenkins. List jobs, check builds, view logs, trigger builds."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["jenkins", "cli", "ci", "builds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/vivainio/zenkins"
Repository = "https://github.com/vivainio/zenkins"
Issues = "https://github.com/vivainio/zenkins/issues"

[project.scripts]
zenkins = "zenkins.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["zenkins"]
